# jupyterlab-display-name

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  github-pages.yml
jupyterlab_display_name/: __init__.py
