[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-display-names"
version = "0.1.0"
description = "JupyterLab server extension that adds a display name field to the login page."
authors = [
  { name = "Alex Hadley", email = "contact@alexhadley.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = [
  "jupyter",
  "jupyterlab",
  "jupyterlab-extension"
]
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: 4",
  "Framework :: Jupyter :: JupyterLab :: Extensions",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9,<3.13"
dependencies = [
  "jupyter_server>=2.9.1,<3",
]

[project.urls]
Homepage = "https://github.com/PainterQubits/jupyterlab-display-name"
Repository = "https://github.com/PainterQubits/jupyterlab-display-name"

[tool.hatch.build.targets.sdist]
exclude = ["**/*"]
artifacts = [
  "/jupyterlab_display_name",
  "/jupyter_server_config.json",
]

[tool.hatch.build.targets.wheel]
artifacts = [
  "py.typed",
  "templates",
]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter_server_config.json" = "etc/jupyter/jupyter_server_config.d/jupyterlab_display_name.json"

# For building and linting
[tool.hatch.envs.default]
dependencies = [
  "jupyterlab>=4.0.7,<5",
  "flake8>=6.1.0,<7",
  "pylint>=3.0.2,<4",
  "mypy>=1.6.1,<2",
  "black>=23.10.1,<24",
]

# For running JupterLab in development
[tool.hatch.envs.jupyterlab]
dependencies = [
  "jupyterlab>=4.0.7,<5",
  "jupyter-collaboration>=1.2.0,<2",
]

[tool.hatch.envs.jupyterlab.scripts]
start = "jupyter lab"

[tool.mypy]
strict = true

[tool.pylint.basic]
good-names-rgxs = ["^[a-z][a-z0-9]?$"]
