[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-display-name"
version = "0.1.3"
description = "JupyterLab server extension that adds a display name field to the login page."
authors = [{ name = "Alex Hadley", email = "contact@alexhadley.com" }]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["jupyter", "jupyterlab", "jupyterlab-extension"]
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: 4",
  "Framework :: Jupyter :: JupyterLab :: Extensions",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = ["jupyter_server>=2.12.1,<3", "tornado>=6.4,<7"]

[project.urls]
Homepage = "https://github.com/PainterQubits/jupyterlab-display-name"
Repository = "https://github.com/PainterQubits/jupyterlab-display-name"

[tool.hatch.build.targets.wheel]
packages = ["jupyterlab_display_name"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter_server_config.json" = "etc/jupyter/jupyter_server_config.d/jupyterlab_display_name.json"

[tool.hatch.envs.default]
description = "For running JupyterLab in development"
dependencies = ["jupyterlab>=4.0.10,<5", "jupyter-collaboration>=2.0.1,<3"]

[tool.hatch.envs.lint]
description = "For linting and type checking Python"
dependencies = [
  "flake8>=6.1.0,<7",
  "pylint>=3.0.3,<4",
  "mypy>=1.8.0,<2",
  "black>=23.12.1,<24",
]

[tool.mypy]
strict = true
