[build-system]
requires = ["hatchling", "hatch-nodejs-version", "jupyterlab>=4.0.10,<5"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-display-name"
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: 4",
  "Framework :: Jupyter :: JupyterLab :: Extensions",
  "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dynamic = ["version", "description", "authors", "urls", "keywords"]
dependencies = ["jupyter_server>=2.12.1,<3", "tornado>=6.4,<7"]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls", "keywords"]

[tool.hatch.build.targets.sdist]
artifacts = ["labextension"]

[tool.hatch.build.targets.wheel]
packages = ["jupyterlab_display_name"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter_server_config.json" = "etc/jupyter/jupyter_server_config.d/jupyterlab_display_name.json"
"labextension" = "share/jupyter/labextensions/jupyterlab-display-name"
"install.json" = "share/jupyter/labextensions/jupyterlab-display-name/install.json"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.8.3"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["labextension/package.json"]
skip-if-exists = ["labextension/package.json"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build"
npm = ["jlpm"]

[tool.hatch.envs.default]
description = "For running JupyterLab in development"
dependencies = ["jupyterlab>=4.0.10,<5", "jupyter-collaboration>=2.0.1,<3"]

[tool.hatch.envs.lint]
description = "For linting and type checking Python"
dependencies = [
  "flake8>=6.1.0,<7",
  "pylint>=3.0.3,<4",
  "mypy>=1.8.0,<2",
  "black>=23.12.1,<24",
]

[tool.mypy]
strict = true
